<resources>
    <string name="app_name">Box</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please wait...</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_create_account">Create Account</string>
    <string name="field_username">Username</string>
    <string name="repeat_password">Repeat password</string>
    <string name="empty_text_field">Empty text field</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="the_password_must_contain_more_than_second_characters">The password must contain more than second characters.</string>
    <string name="invalid_user_name">Invalid user name</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="invalid_email_or_password_message">Invalid email or password.</string>
    <string name="an_error_occurred_while_performing_the_operation_try_again_later_message">An error occurred while performing the operation. Try again later.</string>
    <string name="such_a_user_already_exists_message">Such a user already exists.</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="dashboard_screen">Dashboard</string>
    <string name="settings_screen">Settings</string>
    <string name="profile_screen">Profile</string>
    <string name="let_s_imagine_this_is_a_user_profile_screen">Let\'s imagine this is a user profile screen</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_profile_screen">Edit profile</string>
    <string name="field_created_at">Created At</string>
    <string name="right_now_you_can_edit_only_username">Right now you can edit only username</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="enable_checkbox">Enable %1$s box</string>
    <string name="settings_description">Enable or disable any box you want</string>
    <string name="box_title">%1$s box</string>
    <string name="no_boxes">There aren\'t boxes you are looking for</string>
    <string name="box_screen">Box</string>
    <string name="go_back">Go back</string>
    <string name="this_is_box">This is a %1$s box!</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="admin_screen">Admin Panel</string>
    <string name="account_id">Account ID</string>
    <string name="box_name">Color name</string>
    <string name="account_email">Account email</string>
    <string name="username">Username</string>
    <string name="box_id">Box ID</string>
    <string name="color_value">Color Value</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings_is_active">Is Active</string>
    <string name="all_accounts">All Accounts</string>
</resources>